@@ -163,3 +163,6 @@
 	* Renamed 'configure.in' 'configure.ac'.
 	* Modernized invocation of AC_INIT() and AM_INIT() in
 	'configure.ac'.
+2014-09-22 Fred Gleason <fredg@paravelsystems.com>
+	* Modified the 'make rpm' to use home directory based build
+	tree in 'Makefile.am'.
